--- a/UniqueSDKDemo/Base.lproj/Main.storyboard
+++ b/UniqueSDKDemo/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PF0-L4-BmP">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -31,7 +31,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QYc-N6-uk9">
                                         <rect key="frame" x="0.0" y="72" width="194.5" height="31"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Sign (Local)"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="SavePasscode"/>
                                         <connections>
                                             <action selector="signAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l3t-n8-4mk"/>
                                         </connections>
@@ -70,6 +70,7 @@
                             <constraint firstItem="1vl-Kb-u0L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gWy-Ko-63S"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="5kG-gx-nQv"/>
                     <connections>
                         <outlet property="GetMnemonicButton" destination="Tza-xO-iF6" id="YVQ-ER-pKw"/>
                         <outlet property="buildButton" destination="K6N-TK-73I" id="H0q-xv-ruH"/>
@@ -80,7 +81,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1" y="94"/>
+            <point key="canvasLocation" x="910.14492753623199" y="93.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="tW2-cG-Hd9">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PF0-L4-BmP" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z8A-ej-diV">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="biC-dI-WaU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hCE-er-w5x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="0.0" y="93.75"/>
         </scene>
     </scenes>
     <resources>
