--- a/UniqueSDKDemo/Base.lproj/Main.storyboard
+++ b/UniqueSDKDemo/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="1vl-Kb-u0L">
-                                <rect key="frame" x="145" y="396.5" width="124.5" height="103"/>
+                                <rect key="frame" x="145" y="324.5" width="124.5" height="247"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6N-TK-73I">
                                         <rect key="frame" x="0.0" y="0.0" width="124.5" height="31"/>
@@ -28,8 +28,24 @@
                                             <action selector="buildAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tj6-p9-8R4"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Boc-7p-7aA">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RDL-ha-Ehz">
                                         <rect key="frame" x="0.0" y="72" width="124.5" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Sign"/>
+                                        <connections>
+                                            <action selector="SignAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Gym-Jc-gOT"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Np-t2-ij4">
+                                        <rect key="frame" x="0.0" y="144" width="124.5" height="31"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="SubmitWatch"/>
+                                        <connections>
+                                            <action selector="SubmitWatchAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ibH-PE-vZC"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Boc-7p-7aA">
+                                        <rect key="frame" x="0.0" y="216" width="124.5" height="31"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" title="Create Account"/>
                                         <connections>
