--- a/UniqueSDKDemo/Base.lproj/Main.storyboard
+++ b/UniqueSDKDemo/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PF0-L4-BmP">
-    <device id="retina6_1" orientation="portrait" appearance="dark"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="41" translatesAutoresizingMaskIntoConstraints="NO" id="1vl-Kb-u0L">
-                                <rect key="frame" x="141" y="360.5" width="132" height="175"/>
+                                <rect key="frame" x="141" y="432.5" width="132" height="31"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kqy-QY-q5g">
                                         <rect key="frame" x="0.0" y="0.0" width="132" height="31"/>
@@ -28,20 +28,58 @@
                                             <action selector="createCollectionAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="skK-VS-8uF"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pB-hU-K9g">
-                                        <rect key="frame" x="0.0" y="72" width="132" height="31"/>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="TdY-X1-NeZ">
+                                <rect key="frame" x="20" y="108" width="374" height="166"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S1C-rc-nWh">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BiN-nI-Ylc">
+                                        <rect key="frame" x="0.0" y="44" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Mnemonic" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yve-eM-V4g">
+                                        <rect key="frame" x="0.0" y="88" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gT1-dJ-ELg">
+                                        <rect key="frame" x="125" y="132" width="124.5" height="34"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="ManageToken"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Create Account"/>
                                         <connections>
-                                            <action selector="manageTokenAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FJz-dd-xGw"/>
+                                            <action selector="createAccountAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="S8Y-g5-8Ph"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AZh-M6-zao">
-                                        <rect key="frame" x="0.0" y="144" width="132" height="31"/>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="S1C-rc-nWh" secondAttribute="trailing" id="Dup-Q5-UJL"/>
+                                    <constraint firstItem="S1C-rc-nWh" firstAttribute="leading" secondItem="TdY-X1-NeZ" secondAttribute="leading" id="WWM-jD-21V"/>
+                                    <constraint firstAttribute="trailing" secondItem="BiN-nI-Ylc" secondAttribute="trailing" id="haq-h2-5hF"/>
+                                    <constraint firstItem="BiN-nI-Ylc" firstAttribute="leading" secondItem="TdY-X1-NeZ" secondAttribute="leading" id="nSS-NH-RJo"/>
+                                    <constraint firstItem="yve-eM-V4g" firstAttribute="leading" secondItem="TdY-X1-NeZ" secondAttribute="leading" id="stq-ix-aUh"/>
+                                    <constraint firstAttribute="trailing" secondItem="yve-eM-V4g" secondAttribute="trailing" id="vOR-bd-9OQ"/>
+                                </constraints>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="mfL-MT-qEd">
+                                <rect key="frame" x="20" y="613.5" width="374" height="73"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Collection ID" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C6B-Yo-675">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zex-ct-13x">
+                                        <rect key="frame" x="0.0" y="42" width="374" height="31"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="GetResult"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="CreateToken"/>
                                         <connections>
-                                            <action selector="getResultAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5Uu-3l-GIa"/>
+                                            <action selector="createTokenAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e8o-xx-YdX"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -50,11 +88,24 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mfL-MT-qEd" secondAttribute="trailing" constant="20" id="7Cf-rV-Fb5"/>
+                            <constraint firstItem="TdY-X1-NeZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="K7J-b6-tIa"/>
+                            <constraint firstItem="mfL-MT-qEd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eAz-yO-7sX"/>
                             <constraint firstItem="1vl-Kb-u0L" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ep1-8o-uWV"/>
+                            <constraint firstItem="TdY-X1-NeZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="f4h-Et-rxy"/>
+                            <constraint firstItem="mfL-MT-qEd" firstAttribute="top" secondItem="1vl-Kb-u0L" secondAttribute="bottom" constant="150" id="fJE-d4-atY"/>
                             <constraint firstItem="1vl-Kb-u0L" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gWy-Ko-63S"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TdY-X1-NeZ" secondAttribute="trailing" constant="20" id="lCT-r7-069"/>
+                            <constraint firstItem="TdY-X1-NeZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="nM1-tB-CdS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="5kG-gx-nQv"/>
+                    <connections>
+                        <outlet property="accountAddressTextField" destination="BiN-nI-Ylc" id="mHL-2N-eVe"/>
+                        <outlet property="accountMnemonicTextField" destination="yve-eM-V4g" id="OWQ-yC-zpZ"/>
+                        <outlet property="accountNameTextField" destination="S1C-rc-nWh" id="vNP-Zq-ecq"/>
+                        <outlet property="tokenCollectionIDTextField" destination="C6B-Yo-675" id="s8D-zD-iPM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
